# UNIZAR_PHD

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  mandelbrot.sh  mersenne_twister.sh  neares.sh  nearest.sh  power_GPU.sh  sobel_filter.sh  test_flow.sh  test_power_CPU.sh  test_sobel.sh  test_sobel_long.sh  test_watermark.sh  watermarking.sh
F_ACACES/: ACACES_model.py  ACACES_modelFPGA.py
F_CMMSE/: CMMSE_2.py  CMMSE_FPGA_dy.py  CMMSE_dy.py  CMMSE_power.py  CMMSE_results.py  CMMSE_results_ppt.py  motiv_CMMSE.py
benchsuite/: CMakeLists.txt  aes_decrypt.cpp  aes_decrypt.hpp  aes_proc.cpp  aes_proc.hpp  assign.cpp  assign.hpp  binomial.cpp  binomial.hpp  gaussian.cpp  gaussian.hpp  gsm.cpp  gsm.hpp  main.cpp  main.hpp  mandelbrot.cpp  mandelbrot.hpp  matrix_mult.cpp  matrix_mult.hpp  matrix_mult_Dim2.cpp  mersenne.cpp  mersenne.hpp  nbody.cpp  nbody.hpp  nearest_n.cpp  nearest_n.hpp  nn.cpp  nn.hpp  nw.cpp  nw.hpp  parse_ppm.cpp  ray.cpp  ray.hpp  saxpy.cpp  saxpy.hpp  sobel.cpp  sobel.hpp  vecAllocator.hpp  vecadd.cpp  vecadd.hpp  (+2 more)
benchsuite/altera_kernel/: matrix_mult.cl  rsa.cl  sobel_3.cl  watermarking_simd.cl
benchsuite/utils/: io.cpp  io.hpp  memory.hpp  rand.cpp  rand.hpp
cmake/modules/: FindNode.cmake  OpenCL.cmake  SetFlags.cmake  SetLibraries.cmake
include/: EngineCL.hpp  buffer.hpp  clbalancer.hpp  clutils.hpp  config.hpp  device.hpp  inspector.hpp  ndrange.hpp  runtime.hpp  scheduler.hpp  semaphore.hpp  work.hpp
include/schedulers/: dynamic.hpp  hguided.hpp  particle.hpp  proportional.hpp  static.hpp  static_long.hpp
src/: CMakeLists.txt  buffer.cpp  buffer.hpp  clbalancer.hpp  clutils.cpp  clutils.hpp  config.hpp  device.cpp  device.hpp  inspector.cpp  inspector.hpp  runtime.cpp  runtime.hpp  scheduler.hpp  semaphore.hpp  work.hpp
src/schedulers/: dynamic.cpp  dynamic.hpp  hguided.cpp  hguided.hpp  particle.cpp  proportional.cpp  proportional.hpp  static.cpp  static.hpp  static_long.cpp
src/tools/: clkernel.cpp
support/kernels/: aes_decrypt.cl  binomial.cl  gaussian.cl  gsm.cl  mandelbrot.cl  mandelbrot_kernel.cl  matrix_mult.cl  mersenne_kernel.cl  mersenne_kernel_box.cl  nbody.cl  nn.cl  nw.cl  ray.cl  raytracer.cl  sobel.cl  sobel_med.cl  vecadd.cl  vecadd_offset.cl  watermarking_off.cl  watermarking_simd.cl
support/ray_scenes/: ray1.scn  ray_v3.scn
test/: CMakeLists.txt  semaphore.cpp  tests.hpp
test_watermark/: plot_chunk2.py  static_4.txt
txt_test/: data3BS_D.txt  data3B_D.txt  data3CBS_D.txt  data3CS_D.txt  data3CUO_D.txt  data3CU_D.txt  data3_D.txt  data7BS_D.txt  data_add_CPU.txt  data_add_FPGA.txt  data_add_GPU.txt  data_gauss_CPU.txt  data_gauss_CPU_128.txt  data_gauss_FPGA.txt  data_gauss_FPGA_128.txt  data_gauss_FPGA_NR.txt  data_gauss_GPU.txt  data_gauss_GPU_128.txt  data_noread.txt  data_twist_CPU.txt  data_twist_FPGA.txt  data_twist_GPU.txt
